Fix timeline on mobile

--- a/styles/components/_timeline-card.module.css
+++ b/styles/components/_timeline-card.module.css
@@ -21,6 +21,12 @@
   z-index: 1;
 }
 
+@media (max-width: 900px) {
+  .card {
+    --card-height: 13rem;
+  }
+}
+
 .card:hover {
   box-shadow: var(--shadow-high);
 }
