--- a/styles/components/_timeline-item.module.css
+++ b/styles/components/_timeline-item.module.css
@@ -8,6 +8,12 @@
 
 @media (max-width: 900px) {
   .itemContainer {
+    padding: var(--small-spacing);
+  }
+}
+
+@media (max-width: 900px) {
+  .itemContainer {
     flex-direction: column;
   }
 }
@@ -17,6 +23,13 @@
   align-items: center;
   gap: var(--small-spacing);
   justify-content: center;
+}
+
+@media (max-width: 900px) {
+  .cardContainer {
+    gap: 0;
+    margin: 0 calc(-1 * var(--base-spacing));
+  }
 }
 
 .cardContainer > :nth-child(2) {
